--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,11 +7,11 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Services</a></li>
+		<li><a href="/products" class="pa3 no-underline db">Motor</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/values" class="pa3 no-underline db">Mobil</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		<li><a href="/post" class="pa3 no-underline db">Penginapan</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Kontak</a></li>
 	</ul>
