--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,7 +7,7 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Motor</a></li>
+		<li><a href="/motor" class="pa3 no-underline db">Motor</a></li>
 
 		<li><a href="/values" class="pa3 no-underline db">Mobil</a></li>
 
