--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -9,9 +9,9 @@
 	<ul class="flex b grey-3">
 		<li><a href="/motor" class="pa3 no-underline db">Motor</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Mobil</a></li>
+		<li><a href="/mobil" class="pa3 no-underline db">Mobil</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Penginapan</a></li>
+		<li><a href="/penginapan" class="pa3 no-underline db">Penginapan</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Kontak</a></li>
 	</ul>
