--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,8 +6,6 @@
 
 {{ partial "2-up" .Params }}
 
-{{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }}
-
-{{ partial "blog" . }}
+{{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Baca lagi" "buttonLink" "/motor") }}
 
 {{ end }}
