--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -16,9 +16,9 @@
 				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Services</a></li>
-					<li><a href="/values" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
+					<li><a href="/motor" class="link">Motor</a></li>
+					<li><a href="/mobil" class="link">Mobil</a></li>
+					<li><a href="/penginapan" class="link">Penginapan</a></li>
 					<li><a href="/contact" class="link">Kontak</a></li>
 				</ul>
 			</div>
@@ -27,7 +27,7 @@
 				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
 				<ul class="mb3">
 					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
+					<li><a href="/contact" class="link">Booking & Pemesanan</a></li>
 				</ul>
 			</div>
 
